--- a/styles/components/header.module.css
+++ b/styles/components/header.module.css
@@ -6,7 +6,8 @@
     align-items: center;
     justify-content: center;
     position: fixed;
-    z-index: 3;
+    z-index: 999;
+    box-shadow: 0 2px 5px #0000006d;
 }
 
 .links {
