--- a/styles/components/searchbar.module.css
+++ b/styles/components/searchbar.module.css
@@ -17,7 +17,7 @@
 }
 
 .SearchBar button{
-    background-color: #f66d6d;
+    background-color: #fb3333;
     border: none;
     padding: 10px;
     cursor: pointer;
