--- a/styles/components/buttonmodal.module.css
+++ b/styles/components/buttonmodal.module.css
@@ -7,7 +7,6 @@
     border: 1px solid #fb3333;
     text-align: center;
     transition: background-color 0.3s, color 0.3s;
-    border-radius: 40px;
     font-family: "Roboto", sans-serif;
     font-style: italic;
     color: #ffffff;
@@ -16,4 +15,17 @@
     line-height: 35px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
     width: 10rem;
+    animation: pulse 2s infinite;
 }
+
+@keyframes pulse {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
