--- a/styles/pages/parcerias.module.css
+++ b/styles/pages/parcerias.module.css
@@ -95,20 +95,37 @@
 .invText{
     color: #0f0049;
     font-family: "roboto", sans-serif;
-    font-size: 1.4rem;
-    font-weight: 600;
-    line-height: 35px;
+    line-height: 30px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
     margin-left: 200px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 40%;
-    width: 30%;
-    animation: brilho 2s linear infinite;
+    height: 60%;
+    width: 50%;
     text-align: center;
 }
 
+.invText2 h1{
+    font-weight: 700;
+    font-size: 60px;
+    padding-bottom: 15px;
+    
+    
+}
+
+.invText2 p{
+    font-weight: 700;
+    font-size: 20px;
+    padding-left: 8px;
+}
+
+.invText2{
+    text-align: start;
+    width: 100%;
+    animation: brilho 2s linear infinite;
+    padding-bottom: 33px;
+}
 
 .opaco{
     position: fixed;
