--- a/styles/components/feed.module.css
+++ b/styles/components/feed.module.css
@@ -3,10 +3,34 @@
     padding: 0;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
+.Text1{
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 50%;
+    color: #305BB7;
+}
+
+.Text1 h1{
+    color: #0f0049;
+    margin-bottom: 10px;
+    font-size: 40px;
+}
+
+.Text h3{
+text-align: start;
+}
+
+
 .Content{
-    padding-top: 80px;
+    width: 50%;
+    padding-top: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
