--- a/styles/components/resume.module.css
+++ b/styles/components/resume.module.css
@@ -4,11 +4,35 @@
     height: 300px;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-evenly;
+    
 }
 
 .Container{
-    width: 300px;
-    height: 300px;
+    width: 800px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
+}   
+
+.Text{
+    display: flex;
+    flex-direction: column;
+    font-family: "Roboto";
+    width: 50%;
+    height: 70%;
+    text-align: left;
+}
+
+.Text h1{
+    color: #0f0049;
     
 }
+
+.Text h3{
+    color: #305BB7;
+    
+}
+
+
