--- a/styles/components/slider.module.css
+++ b/styles/components/slider.module.css
@@ -44,4 +44,16 @@
     z-index: 1;
 }
 
+.Slidercaption{
+    position: absolute;
+    bottom: 42px;
+    left: 40px;
+    color: white;
+    padding: 5px;
+    font-size: 42px;
+    font-family: "Roboto";
+    font-weight: bolder;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 1);
+}
+
 
