--- a/styles/pages/parcerias.module.css
+++ b/styles/pages/parcerias.module.css
@@ -17,12 +17,13 @@
     justify-content: space-around;
     align-items: center;
     background-color: #49A9F8;
+    height: 600px;
 }
 
 .Content{
     display: flex;
     width: 85%;
-    
+    align-items: center;
 }
 
 @keyframes brilho {
@@ -36,7 +37,7 @@
 .Text h1{
     color: white;
     font-weight: 700;
-    font-size: 60px;
+    font-size: 50px;
     font-family: "Roboto", sans-serif;
     animation: brilho 2s linear infinite;
     margin-bottom: 10px;
@@ -47,7 +48,7 @@
     width: 100%;
     color: white;
     font-weight: 700;
-    font-size: 32px;
+    font-size: 24px;
     font-family: "Roboto", sans-serif;
     font-style: italic;
 }
@@ -83,13 +84,21 @@
 }
 
 .invite{
-    margin-top: 60px;
+    width: 100%;
+    padding-top: 60px;
+    padding-bottom: 100px;
     display: flex;
-    width: 80%;
-    align-items: center;
     justify-content: center;
-    margin-bottom: 80px;
-    
+    align-items: center;
+    background-color: #ffffff;
+    height: 600px;
+}
+
+.invContent{
+    display: flex;
+    width: 95%;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .invText{
@@ -97,21 +106,20 @@
     font-family: "roboto", sans-serif;
     line-height: 30px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
-    margin-left: 200px;
+    margin-left: 100px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 60%;
-    width: 50%;
+    justify-content: center;
+    height: 100%;
     text-align: center;
+    width: 70%;
 }
 
 .invText2 h1{
     font-weight: 700;
-    font-size: 60px;
-    padding-bottom: 15px;
-    
-    
+    font-size: 50px;
+    padding-bottom: 12  px;
+        
 }
 
 .invText2 p{
