--- a/styles/components/feed.module.css
+++ b/styles/components/feed.module.css
@@ -29,11 +29,19 @@ text-align: start;
 
 
 .Content{
-    width: 50%;
+    width: 100%;
     padding-top: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #fff;
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    width: 70%;
+    margin-left: 50px;
 }
