--- a/styles/components/searchbar.module.css
+++ b/styles/components/searchbar.module.css
@@ -2,11 +2,11 @@
     display: flex;
     align-items: center;
     width: 19rem;
-    border-radius: 20px;
     overflow: hidden;
     justify-content: flex-start;
     height: 2.5rem;
     box-shadow: 0 2px 5px #0000006d;
+    background-color: #ffffff;
 }
 
 .SearchBar input{
