--- a/styles/components/card.module.css
+++ b/styles/components/card.module.css
@@ -1,42 +1,84 @@
 .Container{
-    width: 400px;
-    height: 310px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.link{
+    background-color: rgb(255, 255, 255);
     width: 100%;
-    height: 100%;
-    text-decoration: none;
-}
-
-.Content{
-    width: 100%;
-    height: 100%;
-    border: 1px rgb(192, 192, 192) solid;
-    box-shadow: 0 2px 5px #0000006d;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #f5f6f8;
-    transition: transform 0.3s ease;
+    margin-bottom: 20px;
+    padding-bottom: 5px;
 }
 
-.Content:hover {
-    transform: scale(1.1); /* Aumenta em 10% */
+.text{
+    font-size: 16px;
+    margin-bottom: 5px;
+    color: #0f0049;
+    font-family: "roboto", sans-serif;
+    font-weight: 700;
+    width: 80%;
 }
 
-.Img{
-    width: 320px; 
-    height: 240px;
-    border-radius: 10px;
-    margin-bottom: 10px;
-}
+.expandablebutton {
+    background-color: #fb3333; /* Cor de fundo azul */
+    color: white; /* Cor do texto branco */
+    border: none; /* Sem borda */
+    padding: 10px 20px; /* Espaçamento interno */
+    border-radius: 5px; /* Borda arredondada */
+    cursor: pointer; /* Cursor de mão ao passar por cima */
+    display: flex; /* Exibir como flexível para alinhar o ícone */
+    align-items: center; /* Alinhar itens verticalmente */
+  }
+  
+  .expandablebutton:hover {
+    background-color: #e1190b; /* Cor de fundo mais escura ao passar o mouse */
+  }
+  
+  .expandablebutton:focus {
+    outline: none; /* Remover contorno ao focar */
+  }
 
-.Text{
-    font-family: "Roboto";
-    font-size: 14px;
-    color: #000f49;
-}
+  .links{
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    column-gap: 80px;
+  }
+
+  .menu{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 20px;
+    height: 75px;
+  }
+
+  .menu2{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .sub{
+    display: flex;
+    justify-content: center;
+    transition: 0.3s ease;
+  }
+  .sub:hover{
+    scale: 1.1;
+  }
+  .link{
+    text-decoration: none;
+    width: 100%;
+    color: #0f0049;
+    font-size: 15 px;
+    margin-left: 5px;
+  }
+
+
+
+  
