--- a/styles/components/footer.module.css
+++ b/styles/components/footer.module.css
@@ -2,7 +2,7 @@
     background-color: rgb(255, 255, 255);
     display: flex;
     width: 100vw;
-    height: 200px;
+    height: 20vh;
     align-items: center;
     justify-content: center;
     flex-direction: column;
