--- a/styles/components/header.module.css
+++ b/styles/components/header.module.css
@@ -1,10 +1,10 @@
 .header{
-    width: 100vw;
-    height: 60px;
+    width: 100%;
+    height: 10vh;
     background-color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     position: fixed;
     z-index: 999;
     box-shadow: 0 2px 5px #0000006d;
@@ -12,7 +12,7 @@
 
 .links {
     font-family: 'roboto', sans-serif;
-    margin-right: 7vw;
+    margin-right: 2vw;
 
 }   
 
@@ -22,10 +22,11 @@
     text-decoration: none;
     font-weight: 600;
     color: rgb(16, 16, 78);
+    font-size: medium;
 }
 
 .logoimg{
-    margin-left: 3rem;
+    margin-left: 1rem;
     margin-top: 2px;
     height: 65px;
     width: 50px;    
