--- a/styles/components/sidebar.module.css
+++ b/styles/components/sidebar.module.css
@@ -2,4 +2,35 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.4);
+    align-items: center;
+}
+
+.main{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.LinkEst{
+    width: 100%;
+    background-color: #f5f6f8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 40px;
+    margin-bottom: 10px;
+}
+
+.link{
+    display: flex;
+    justify-content: space-between;
+    text-decoration: none;
+    font-family: "Roboto";
+    color: #49a9f8;
+    font-size: 20px;
 }
