--- a/styles/components/slider2.module.css
+++ b/styles/components/slider2.module.css
@@ -1,15 +1,15 @@
 .Img{
-    width: 700px;
+    width: 600px;
     height: 400px;
     border-radius: 0px;
     min-height: 100%;
     object-fit: cover;
     display: block !important;
-    border: 4px solid  #49A9f8;
+    border: 4px solid #FFF;
 }
 
 .image__slider__container{
-    max-width: 950px;
+    max-width: 700px;
     overflow: hidden;
     padding: 0;
     position: relative;
