--- a/styles/pages/cpint.module.css
+++ b/styles/pages/cpint.module.css
@@ -10,18 +10,19 @@
 .main{
     background-color: #49A9F8;
     display: grid;
-    padding-top: 100px;
-    grid-template-columns: 10% 90%;
-    height: 120vh;
+    grid-template-columns: 18% 90%;
+    height: 100vh;
 }
 
 .content{
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: auto;
 }
 
 .sbar{
+    margin-top: 100px;
     width: 70%;
     height: 100;
     display: flex;
