--- a/styles/pages/home.module.css
+++ b/styles/pages/home.module.css
@@ -8,7 +8,7 @@
 
 .Slider{
     background-color: #49A9F8;
-    margin-top: 50px;
+    /* margin-top: 50px; */
     display: flex;
     flex-direction: column;
     width: 100%;
