--- a/styles/pages/laboratorios.module.css
+++ b/styles/pages/laboratorios.module.css
@@ -7,7 +7,7 @@
 
 .main{
     background-color: #49A9F8;
-    margin-top: 40px;
+    /* margin-top: 40px; */
     display: flex;
     flex-direction: column;
     width: 100%;
