--- a/styles/components/prof.module.css
+++ b/styles/components/prof.module.css
@@ -24,11 +24,10 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    justify-content: start;
     width: 240px;
     height: 240px;
-    background: linear-gradient(#00049f 80px, #fff 80px);
-    box-shadow: 0 2px 5px #0000006d;
-    border: 3px solid white;
+    background-color: #fff;
     border-radius: 25px;
 }
 
@@ -36,7 +35,6 @@
     width: 140px;
     height: 140px;
     border-radius: 120px;
-    border: 3px solid white;
     box-shadow: 0 2px 5px #0000006d;
 }
 
@@ -45,6 +43,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: #49a9f8;
+    text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
 }
 
 .text h1{
