--- a/styles/components/sidebar.module.css
+++ b/styles/components/sidebar.module.css
@@ -12,25 +12,30 @@
 .main{
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100%;
+    padding-top: 80px;
 }
 
-.LinkEst{
-    width: 100%;
-    background-color: #f5f6f8;
+.buttonEst{
+    width: 60%;
+    background-color: #49a9f8;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     height: 40px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 5px #0000006d;
 }
 
-.link{
+.button{
     display: flex;
     justify-content: space-between;
     text-decoration: none;
     font-family: "Roboto";
-    color: #49a9f8;
+    color: #ffffff;
     font-size: 20px;
+    border: none;
+    background-color: #49a9f8;
 }
