--- a/styles/components/card_prof.module.css
+++ b/styles/components/card_prof.module.css
@@ -32,10 +32,11 @@
 }
 
 .img2{
-    width: 140px;
-    height: 140px;
+    width: 130px;
+    height: 130px;
     border-radius: 120px;
     box-shadow: 0 2px 5px #0000006d;
+    border: 3px solid #49a9f8;
 }
 
 .text{
@@ -43,18 +44,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: #49a9f8;
-    text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
 }
 
 .text h1{
     font-size: 24px;
     margin-bottom: 5px;
+    color: #0f0049;
+    font-weight: 600;
 }
 
 .text h3{
-    font-size: 14px;
+    font-size: 13px;
     margin-bottom: 5px;
+    color: #305bb7;
 }
 
 
