--- a/styles/components/footer.module.css
+++ b/styles/components/footer.module.css
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    box-shadow: 0 2px 18px #0000006d;
 }
 
 .footerbox{
