--- a/styles/components/labperfil.module.css
+++ b/styles/components/labperfil.module.css
@@ -10,9 +10,10 @@
     width: 90%;
     padding-top: 0px;
     display: flex;
-    align-items: center;
+    padding-top: 90px;
+    align-items: start;
     justify-content: space-between;
-    height: 100vh;
+    height: 90vh;
     background-color: #49A9F8;
 }
 
