--- a/styles/components/searchbar.module.css
+++ b/styles/components/searchbar.module.css
@@ -1,19 +1,20 @@
 .SearchBar {
     display: flex;
     align-items: center;
-    width: 19rem;
+    width: 80%;
     overflow: hidden;
     justify-content: flex-start;
     height: 2.5rem;
     box-shadow: 0 2px 5px #0000006d;
     background-color: #ffffff;
+    margin-bottom: 10px;
 }
 
 .SearchBar input{
     flex: 1;
-    padding: 10px;
     border: none;
     outline: none;
+    padding-left: 15px;
 }
 
 .SearchBar button{
@@ -22,8 +23,8 @@
     padding: 10px;
     cursor: pointer;
     border-radius: 50px;
-    margin-right: 0.7rem;
-    width: 2.2rem;
+    margin-right: 2.4rem;
+    width: 2.1rem;
     height: 35px;
 }
 
