--- a/styles/components/sidebar.module.css
+++ b/styles/components/sidebar.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     background-color: #fff;
     box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.4);
     align-items: center;
@@ -12,20 +12,22 @@
 .main{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     width: 100%;
-    padding-top: 80px;
+    padding-top: 30px;
+    padding-left: 50px;
 }
 
 .buttonEst{
-    width: 60%;
+    width: 80%;
     background-color: #49a9f8;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     height: 40px;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     box-shadow: 0 2px 5px #0000006d;
 }
 
