--- a/styles/pages/home.module.css
+++ b/styles/pages/home.module.css
@@ -55,11 +55,12 @@
 
 .Content{
     background-color: #ffffff;
-    height: 70vh;
+    height: 50vh;
     display: flex;
     flex-direction: column;
     align-items: center; 
     width: 100vw;
+    margin-top: 50px;
     margin-bottom: 0;
     padding-bottom: 0;
 }
@@ -90,9 +91,7 @@
 }
 
 .board{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+    display: flex;
 
 
 }
