--- a/styles/pages/prop_intelectual.module.css
+++ b/styles/pages/prop_intelectual.module.css
@@ -2,7 +2,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: #ffffff;    
+    background-color: #ffffff;  
+    justify-content: center;  
 }
 
 .main {
@@ -11,8 +12,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #49A9F8;
-    height: 40vh;
+    background-color: #49a9f8;
+    height: 18vh;
 }
 
 .Content {
@@ -24,7 +25,7 @@
 }
 
 .Text {
-    color: white;
+    color: #ffffff;
     font-weight: 700;
     font-size: 2rem;
     font-family: Roboto, sans-serif;  
@@ -36,10 +37,57 @@
     font-size: 2rem;
     font-family: Roboto, sans-serif;  
     text-align: center;  
+    margin-bottom: 20px;
 }
 .Images{
     margin: 20px auto 20px auto;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+}
+
+.content1{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #49a9f8;
+    padding-bottom: 20px;
+}
+
+.Text2{
+    text-align: start;
+    width: 100%;
+    margin-left: 50px;
+    color: #ffffff;
+
+}
+
+.Text2 h2{
+    font-size: 60px;
+}
+.types{
+    width: 100%;
+    margin-left: 50px;
+    margin-bottom: 10px;
+}
+
+.types h3{
+    color: #f7f7f7;
+    font-size: 28px;
+}
+
+.types h4{
+    color: #fff;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.element{
+    font-family: "Roboto";
+    color: #fefefe;
+    font-size: 11px;
+    margin-bottom: 10px;
+    margin-left: 12px;
+    width: 80%;
 }
