--- a/styles/components/labperfil.module.css
+++ b/styles/components/labperfil.module.css
@@ -7,19 +7,19 @@
 }
 
 .content{
-    width: 90%;
+    width: 95%;
     padding-top: 0px;
     display: flex;
-    padding-top: 90px;
-    align-items: start;
+    align-items: center;
     justify-content: space-between;
     height: 90vh;
     background-color: #49A9F8;
 }
 
 .text{
-    width: 45%;
-    height: 55%;
+    padding-top: 60px;
+    width: 50%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     color: #fff;
@@ -28,13 +28,15 @@
 
 .text h1{
     text-align: start;
-    font-size: 44px;
+    font-size: 42px;
     font-weight: 700;
     margin-bottom: 12px;
+    text-shadow: 0px 1px 6px #00000070   ;
 }
 
 .text h3{
     margin-bottom: 20px;
+    font-size: 17px;
 }
 
 
