--- a/styles/pages/laboratorios.module.css
+++ b/styles/pages/laboratorios.module.css
@@ -7,13 +7,14 @@
 
 .main{
     background-color: #49A9F8;
-    /* margin-top: 40px; */
+    margin-top: -30px; 
     display: flex;
     flex-direction: column;
     width: 100%;
     align-items: center;
     padding-top: 0px;
     padding-bottom: 45px;
+    font-style: italic;
 }
 
 .board{
@@ -31,3 +32,4 @@
     font-family: "Roboto", sans-serif;
     padding-top: 50px;
 }
+
