--- a/styles/pages/prop_intelectual.module.css
+++ b/styles/pages/prop_intelectual.module.css
@@ -13,7 +13,34 @@
     justify-content: center;
     align-items: center;
     background-color: #49a9f8;
-    height: 18vh;
+    height: 90vh;
+    padding-bottom: 20px;
+}
+
+.board{
+    background-color: #fff;
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+    box-shadow: 0 2px 10px #0000006d;
+    
+}
+
+.pics{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    
+}
+
+.boardimg{
+    width: 400px;
+    height: 300px;
+    box-shadow: 0 2px 10px #0000006d;
 }
 
 .Content {
@@ -25,19 +52,22 @@
 }
 
 .Text {
-    color: #ffffff;
+    color: #0f0049;
     font-weight: 700;
-    font-size: 2rem;
+    font-size: 1.7rem;
     font-family: Roboto, sans-serif;  
     text-align: center;  
+    margin-bottom: 30px;
+    font-style: italic;
 }
 .Text2 {
     
     font-weight: 700;
-    font-size: 2rem;
+    font-size: 1.7rem;
     font-family: Roboto, sans-serif;  
     text-align: center;  
     margin-bottom: 20px;
+    color: #0f0049; 
 }
 .Images{
     margin: 20px auto 20px auto;
@@ -51,7 +81,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #49a9f8;
+    background-color: #fff;
     padding-bottom: 20px;
 }
 
@@ -64,30 +94,95 @@
 }
 
 .Text2 h2{
-    font-size: 60px;
+    font-size: 40px;
+    color: #0f0049;
 }
 .types{
     width: 100%;
     margin-left: 50px;
     margin-bottom: 10px;
+    color: #0f0049;
 }
 
 .types h3{
-    color: #f7f7f7;
-    font-size: 28px;
+    color: #0f0049;
+    font-size: 22px;
+    font-weight: 700;
 }
 
 .types h4{
-    color: #fff;
+    color: #0f0049;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
 .element{
     font-family: "Roboto";
-    color: #fefefe;
-    font-size: 11px;
+    color: #0f0049;
+    font-size: 10px;
     margin-bottom: 10px;
     margin-left: 12px;
     width: 80%;
 }
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #0F0049;
+    font-size: 20px;
+    font-style: italic;
+}
+
+.list{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    background-color: #fff;
+    align-items: center;
+    justify-content: center;
+}
+
+.list2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.select{
+    margin-top: 20px;
+    display: flex;
+    width: 70%;
+    align-items: center;
+    justify-content: center;
+    border-radius: 40px;
+    margin-bottom: 20px;
+}
+
+.select h1{
+    margin-right: 90px;
+    font-size: 60px;
+    color: #0f0049;
+}
+
+.tk{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-color: #49a9f8;
+    align-items: center;
+    
+}
+
+.tk2{
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+    align-items: center;
+    background-color: #fff;
+    margin-bottom: 40px;
+    box-shadow: 0 2px 10px #0000006d;
+    border-radius: 40px;
+}
+
