--- a/styles/components/slider.module.css
+++ b/styles/components/slider.module.css
@@ -13,7 +13,7 @@
     overflow: hidden;
     padding: 0;
     position: relative;
-    height: 550px;
+    height: 600px;
   }
     
   @media (max-width:600px){
@@ -47,13 +47,15 @@
 .Slidercaption{
     position: absolute;
     bottom: 42px;
-    left: 40px;
+    left: 25px;
     color: white;
     padding: 5px;
     font-size: 42px;
     font-family: "Roboto";
     font-weight: bolder;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 1);
+    width: 70%;
+    text-align: start;
 }
 
 
