--- a/styles/pages/instituto.module.css
+++ b/styles/pages/instituto.module.css
@@ -12,7 +12,7 @@
     justify-content: space-around;
     align-items: center;
     background-color: #49A9F8;
-    height: 70vh;
+    height: 90vh;
 }
 
 .Content{
@@ -32,7 +32,7 @@
 .Text h1{
     color: white;
     font-weight: 700;
-    font-size: 60px;
+    font-size: 80px;
     font-family: "Roboto", sans-serif;
     animation: brilho 2s linear infinite;
     margin-bottom: 10px;
@@ -77,65 +77,76 @@
     align-items: center;
 }
 
-.Content2 {
-    width: 85%;
-    padding-top: 60px;
-    padding-bottom: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #ffffff;
-    height: 70vh;
-}
-
-.invContent{
-    display: flex;
-    width: 95%;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-.invText{
-    color: #0f0049;
-    font-family: "roboto", sans-serif;
-    line-height: 30px;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
-    margin-left: 100px;
+.content2{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    height: 100%;
+    width: 100%;
+    align-items: center;
+    height: 76vh;
+    padding-top: 30px;
+    margin: 0;
+    
+}
+
+.title{
+    padding-top: 12px;
+    color: #0f0049;
+    font-size: 45px;
+    padding-bottom: 40px;
+}
+
+.Boxes{
+    width: 83%;
+    display: flex;
+    justify-content: space-between;
+    height: 280px;
+}
+
+.box{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    box-shadow: 0 2px 10px #0000006d;
+}
+
+.box h1{
+    padding-top: 20px;
+    color: #0f0049;
+    font-size: 48px;
+    padding-bottom: 10px;
+}
+
+.box p{
     text-align: center;
-    width: 70%;
+    color: #0f0049;
+    font-size: 22px;
 }
 
-.invText2 h1{
-    font-weight: 700;
-    font-size: 50px;
-    padding-bottom: 12  px;
-        
+.box2{
+    box-shadow: 0 2px 10px #0000006d;
+    width: 30%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+
+
 }
 
-.invText2 p{
-    font-weight: 700;
-    font-size: 20px;
-    padding-left: 8px;
+.box2 h1{
+    font-size: 48px;
+    color: #0f0049;
 }
 
-.invText2{
-    text-align: start;
-    width: 100%;
-    animation: brilho 2s linear infinite;
-    padding-bottom: 33px;
+.box2 li{
+    font-size: 18px;
+    margin: 3px;
 }
 
-.opaco{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Cor de fundo opaca */
-    z-index: 999;
-    backdrop-filter: blur(5px); /* Efeito de desfoque */
-}
+
+
+
